# Colour_by_numbers

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  testbed_app.py
.github/workflows/: pages.yml
docs/: README.md  app.js  categories.json  index.html  styles.css
scripts/: make_demo_spread.py
src/colour_by_numbers/: __init__.py  __main__.py  cli.py  contrast.py  demo_spread.py  discover.py  generate.py  illustrate.py  outline.py  palette.py  pipeline.py  print_resolution.py  quantize.py  search.py  simplify.py  subject.py
tests/: test_demo_spread.py  test_discover.py  test_dual_simplify.py  test_illustrate.py  test_palette.py  test_pipeline.py  test_print_resolution.py  test_search.py  test_simplify.py  test_subject.py
