[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colour-by-numbers"
version = "0.1.0"
description = "Search the web for images and convert them into colour-by-numbers outlines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "ddgs>=9.0",
  "requests>=2.31",
  "streamlit>=1.32",
  "rembg[cpu]>=2.0.50",
  "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
subject = ["rembg[cpu]>=2.0.50", "onnxruntime>=1.16"]

[project.scripts]
colour-by-numbers = "colour_by_numbers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
